--- a/css/styles.css
+++ b/css/styles.css
@@ -4,16 +4,23 @@ body {
 
 #letter {
   display: none;
-  max-width: 1000px;
+  max-width: 800px;
+  min-height: 1000px;
+  border: 1px solid grey;
+  padding: 75px;
+  margin: 20px;
 }
 
 #leftAddress {
   text-align: right;
   font-size: 90%;
+  padding: 20px;
 }
 
 h2{
-  font-size: 95%;
+  font-size: 135%;
 }
 
-p {}
+p {
+    font-size: 130%;
+}
